--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -12,9 +12,22 @@
   justify-content: space-evenly;
   align-items: center;
 }
-.closeButton {
+  .closeButton {
+    position: absolute;
+    top: .5rem;
+    z-index: 9999; /* Try a very high value */
+    left: .5rem;
+    background: none;
+    border: none;
+    font-size: 2.5rem;
+    color: var(--accent-purple);
+    cursor: pointer;
+    z-index: 110;
+    line-height: 1;
+  }
+/* .closeButton {
   display: none;
-}
+} */
 .logo h1 {
   font-size: 3rem;
   font-weight: 700;
@@ -89,26 +102,16 @@
     display: none;
   }
 
-  .closeButton {
-    position: absolute;
-    top: .5rem;
-    left: .5rem;
-    background: none;
-    border: none;
-    font-size: 2.5rem;
-    color: var(--accent-purple);
-    cursor: pointer;
-    z-index: 110;
-    line-height: 1;
-  }
-
   .nav {
     position: fixed;
-    top: 5rem;
+    /* top: 5rem; */
+
+     top: 0;
+  height: 100vh;
     right: -100%;
     width: 50%;
     justify-items: center;
-    height: calc(100vh - 10rem);
+    /* height: calc(100vh - 10rem); */
     background-color: rgba(205, 37, 52, 0.6);
     transition: right 0.3s ease;
     padding: 20px;
