--- a/src/components/SkillCard.module.css
+++ b/src/components/SkillCard.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem;
+  padding: .5rem;
   background-color: var(--background-dark);
   text-align: center;
 }
